Fix double-spacing code blocks

--- a/_includes/_sass/components/_code-block.scss
+++ b/_includes/_sass/components/_code-block.scss
@@ -30,23 +30,25 @@ pre code {
 	border: 0;
 }
 
-.highlight {
-	margin: 0;
-	font-size: 1.6rem;
-}
-
-.highlight pre {
-	margin-bottom: 0;
-}
-
-.highlight + .highlight {
-	margin-top: 1rem;
-}
-
-.highlight {
+// Parent container
+div.highlight {
 	background-color: #efefef;
 	margin: 0 0 1rem;
 	padding: .75rem;
-	border-left: 20px solid #ddd;
+	border-left: 1rem solid #ddd;
 	overflow-x: auto;
+}
+
+.highlight {
+	margin: 0;
+	font-size: 1.6rem;
+
+	pre {
+		margin-bottom: 0;
+	}
+
+	& + & {
+		margin-top: 1rem;
+		color: red;
+	}
 }
